# C-Labs

B1/: CMakeLists.txt  access-policies.hpp  main.cpp  sort.hpp  tasks.cpp  tasks.hpp  test-main.cpp  test-task1.cpp  test-task2.cpp  test-task3.cpp  test-task4.cpp  utilities.hpp
B3/: CMakeLists.txt  factorial-container.cpp  factorial-container.hpp  main.cpp  parser.cpp  parser.hpp  phonebook-interface.cpp  phonebook-interface.hpp  phonebook.cpp  phonebook.hpp  tasks.cpp  tasks.hpp  test-factorial.cpp  test-main.cpp  test-parser.cpp  test-phonebook-UI.cpp  test-phonebook.cpp
B4/: CMakeLists.txt  DataStruct.cpp  DataStruct.hpp  main.cpp  task.cpp  task.hpp  test-data-struct.cpp  test-task.cpp
B5/: CMakeLists.txt  Shape.cpp  main.cpp  shape.hpp  task-one.cpp  taskOne.cpp  taskTwo.cpp  test-IO.cpp  test-Shape.cpp  test-main.cpp
